fixed alignment issues and added border/padding/margins

--- a/css/styles.css
+++ b/css/styles.css
@@ -10,21 +10,32 @@ h1 {
 
 .image {
     width: 75%;
+    border: 10px dashed chartreuse;
+    border-width: 5px;
+    margin-bottom: 10px;
     float: left;
+    text-align: center;
 }
 
 .sidebar {
-    width: 20%;
+    width: 24%;
     font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
     font-size: x-large;
     height: 100vh;
     float: right;
     background-color: gold;
-    border: 5px;
-    border-color: chartreuse;
+    text-align: center;
+
 }
 
 p {
-    margin: 20px;
+    border: 20px dotted royalblue;
     padding: 50px;
+}
+
+img {
+    margin: 10px;
+    padding: 10px;
+    border: 20px solid goldenrod;
+    margin-bottom: 40px;
 }
